fix: Fix missing colors in red themes

--- a/src/assets/css/themes/_variables.litely-red.scss
+++ b/src/assets/css/themes/_variables.litely-red.scss
@@ -2,8 +2,3 @@
 
 $secondary: #c80000;
 $danger: darken($primary, 24%);
-
-$theme-colors: (
-  "secondary": $secondary,
-  "danger": $danger,
-);
